// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArticleBadge > ArticleBadge初期値(Category): badge > ダミータグ 1`] = `"ダミータグ"`;

exports[`ArticleBadge > ArticleBadge初期値(Category): badge 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="_baseLink_207ae0"
        data-testid="targetBadgeLink"
        href="/tag-id/1"
      >
        <div
          class="_articleBadge_0ad19f"
        >
          <span
            class="_articleBadgeText_0ad19f"
            data-testid="targetBadgeText"
          >
            ダミータグ
          </span>
          <img
            alt="ダミータグの画像"
            class="_baseImg_c19919 _sm_c19919"
            data-nimg="1"
            decoding="async"
            height="20"
            loading="lazy"
            src="https://placehold.jp/150x150.png?auto=format"
            srcset="https://placehold.jp/150x150.png?auto=format 1x, https://placehold.jp/150x150.png?auto=format 2x"
            style="color: transparent;"
            width="20"
          />
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="_baseLink_207ae0"
      data-testid="targetBadgeLink"
      href="/tag-id/1"
    >
      <div
        class="_articleBadge_0ad19f"
      >
        <span
          class="_articleBadgeText_0ad19f"
          data-testid="targetBadgeText"
        >
          ダミータグ
        </span>
        <img
          alt="ダミータグの画像"
          class="_baseImg_c19919 _sm_c19919"
          data-nimg="1"
          decoding="async"
          height="20"
          loading="lazy"
          src="https://placehold.jp/150x150.png?auto=format"
          srcset="https://placehold.jp/150x150.png?auto=format 1x, https://placehold.jp/150x150.png?auto=format 2x"
          style="color: transparent;"
          width="20"
        />
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ArticleBadge > ArticleBadge初期値(Tag): badge > ダミーカテゴリー 1`] = `"ダミーカテゴリー"`;

exports[`ArticleBadge > ArticleBadge初期値(Tag): badge 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="_baseLink_207ae0"
        data-testid="targetBadgeLink"
        href="/category-id/1"
      >
        <div
          class="_articleBadge_0ad19f"
        >
          <span
            class="_articleBadgeText_0ad19f"
            data-testid="targetBadgeText"
          >
            ダミーカテゴリー
          </span>
          <img
            alt="ダミーカテゴリーの画像"
            class="_baseImg_c19919 _sm_c19919"
            data-nimg="1"
            decoding="async"
            height="20"
            loading="lazy"
            src="https://placehold.jp/150x150.png?auto=format"
            srcset="https://placehold.jp/150x150.png?auto=format 1x, https://placehold.jp/150x150.png?auto=format 2x"
            style="color: transparent;"
            width="20"
          />
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="_baseLink_207ae0"
      data-testid="targetBadgeLink"
      href="/category-id/1"
    >
      <div
        class="_articleBadge_0ad19f"
      >
        <span
          class="_articleBadgeText_0ad19f"
          data-testid="targetBadgeText"
        >
          ダミーカテゴリー
        </span>
        <img
          alt="ダミーカテゴリーの画像"
          class="_baseImg_c19919 _sm_c19919"
          data-nimg="1"
          decoding="async"
          height="20"
          loading="lazy"
          src="https://placehold.jp/150x150.png?auto=format"
          srcset="https://placehold.jp/150x150.png?auto=format 1x, https://placehold.jp/150x150.png?auto=format 2x"
          style="color: transparent;"
          width="20"
        />
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
